<resources>
    <string name="app_name">Trimfit Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Michał Kamiński</string>
    <string name="nav_header_subtitle">mjk1238</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="navigation_drawer_dashboard">Dashboard</string>
    <string name="navigation_drawer_activity">Aktywność</string>
    <string name="navigation_drawer_calendar">Grafik</string>
    <string name="navigation_drawer_activities">Zajęcia</string>
    <string name="navigation_drawer_shopping">Zakupy</string>
    <string name="navigation_drawer_tickets">Karnety</string>
    <string name="navigation_drawer_services">Usługi</string>
    <string name="navigation_drawer_products">Produkty</string>

    <string name="button_reserve">&#xf07a; Rezerwuj</string>
    <string name="button_read_more">Czytaj więcej</string>
    <string name="no_reservations">Nie zapisałeś się na żadne zajęcia</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Witaj "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Hasło musi posiadać conajmniej 4 znaki</string>
    <string name="login_failed">"Login lub hasło jest niepoprawane"</string>
</resources>
